syntax = "proto3";

package proto.v1;

import "proto/v1/investment.proto";

option go_package = "api/go/proto";


service RecordService{
    rpc GetSavedRecords(User) returns (Records) {}
}